--- a/lib/Modal/_modal.scss
+++ b/lib/Modal/_modal.scss
@@ -9,6 +9,10 @@
   background: rgba(0, 0, 0, 0.7);
   z-index: 4000;
 
+  &.--mobile {
+    background: transparent;
+  }
+
   .modal {
     position: absolute;
     display: -webkit-box;
@@ -26,17 +30,32 @@
     width: 100%;
     height: 100%;
 
-    &.--opened {
-      -webkit-animation: .2s linear 0s 1 alternate scale;
-      -moz-animation: .2s linear 0s 1 alternate scale;
-      -o-animation: .2s linear 0s 1 alternate scale;
-      animation: .2s linear 0s 1 alternate scale;
+    &.--animated {
+      &.--desktop {
+        -webkit-animation: .2s linear 0s 1 alternate scale;
+        -moz-animation: .2s linear 0s 1 alternate scale;
+        -o-animation: .2s linear 0s 1 alternate scale;
+        animation: .2s linear 0s 1 alternate scale;
+      }
+
+      &.--mobile {
+        -webkit-animation: .2s linear 0s 1 alternate slide;
+        -moz-animation: .2s linear 0s 1 alternate slide;
+        -o-animation: .2s linear 0s 1 alternate slide;
+        animation: .2s linear 0s 1 alternate slide;
+      }
+
     }
 
     @-webkit-keyframes scale { from { transform:scale(0); } to { transform: scale(1); }  }
     @-moz-keyframes scale { from { transform:scale(0); } to { transform: scale(1); }  }
     @-o-keyframes scale { from { transform:scale(0); } to { transform: scale(1); }  }
     @keyframes scale { from { transform:scale(0); } to { transform: scale(1); }  }
+
+    @-webkit-keyframes slide { from { transform:translateX(-100vw); } to { transform: translateX(0); }  }
+    @-moz-keyframes slide { from { transform:translateX(-100vw); } to { transform: translateX(0); }  }
+    @-o-keyframes slide { from { transform:translateX(-100vw); } to { transform: translateX(0); }  }
+    @keyframes slide { from { transform:translateX(-100vw); } to { transform: translateX(0); }  }
   }
 
   .modal-dialog {
