--- a/src/Input/_input.scss
+++ b/src/Input/_input.scss
@@ -149,8 +149,8 @@
     }
 
     &.--readonly {
-      border-color: #a5a5a5;
-      color: #a5a5a5;
+      border-color: rgb(190, 202, 214);
+      color: #BDBDBD;
       cursor: default;
     }
   }
@@ -174,7 +174,6 @@
       box-shadow: none;
       cursor: default;
       border-color: rgb(190, 202, 214);
-      box-shadow: none;
       color: #BDBDBD;
       outline: none;
 
@@ -191,8 +190,8 @@
     }
 
     &.--readonly {
-      border-color: #a5a5a5;
-      color: #a5a5a5;
+      border-color: rgb(190, 202, 214);
+      color: #BDBDBD;
       cursor: default;
     }
   }
