--- a/src/Attachment/_attachment.scss
+++ b/src/Attachment/_attachment.scss
@@ -15,11 +15,11 @@
     z-index: 1;
     background: linear-gradient(transparent, #fff);
     transition: color 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms, transform 0.2s cubic-bezier(0, 0, 0.2, 1) 0ms;
-    transform: translate(19px, -8px);
+    transform: translate(19px, -10px);
 
 
     &.--readonly{
-      background: linear-gradient(transparent, rgb(228, 230, 231));
+      background: linear-gradient(transparent 45%, #e4e6e7 50%)
     }
 
     &.--focused {
